# industrial_pcl

./: README.md  dependencies.rosinstall
.github/workflows/: .bionic_install_pcl_ppa.sh  bionic_build.yml  clang_format.yml  focal_build.yml
advancing_front_mesher/: CMakeLists.txt  README.md  package.xml
advancing_front_mesher/cmake/: advancing_front_mesher-config.cmake.in
advancing_front_mesher/include/advancing_front_mesher/: advancing_front.h  advancing_front_point_type.h
advancing_front_mesher/include/advancing_front_mesher/impl/: advancing_front.hpp
advancing_front_mesher/include/advancing_front_mesher/utils/: distances.h  intersections.h  normals.h
advancing_front_mesher/include/advancing_front_mesher/utils/impl/: intersections.hpp  normals.hpp
advancing_front_mesher/src/: advancing_front.cpp  advancing_front_reconstruction.cpp
advancing_front_mesher/test/: test_advancing_front.cpp  test_common.cpp  test_plane_intersection.cpp
industrial_pcl_utilities/: CMakeLists.txt  README.md  package.xml
industrial_pcl_utilities/config/: point_cloud_descriptions.yaml
industrial_pcl_utilities/launch/: pcd_to_msg.launch  pcl_msg_generate.launch  pointcloud_transform.launch
industrial_pcl_utilities/rviz/: display_pcd.rviz  display_point_clouds.rviz
industrial_pcl_utilities/src/nodes/: pcd_publisher_node.cpp  point_cloud_generator_node.cpp  pointcloud_transform.py
opencv_cvbridge_tutorial/: CMakeLists.txt  package.xml
opencv_cvbridge_tutorial/src/: image_converter.cpp
pcl_advancing_front/: CMakeLists.txt  README.md  package.xml
pcl_advancing_front/cmake/: pcl_advancing_front-config.cmake.in
pcl_advancing_front/include/pcl_advancing_front/: advancing_front.h  advancing_front_point_type.h
pcl_advancing_front/include/pcl_advancing_front/impl/: advancing_front.hpp
pcl_advancing_front/include/pcl_advancing_front/utils/: distances.h  intersections.h  normals.h
pcl_advancing_front/include/pcl_advancing_front/utils/impl/: intersections.hpp  normals.hpp
pcl_advancing_front/src/: advancing_front.cpp  advancing_front_reconstruction.cpp
pcl_advancing_front/test/: CMakeLists.txt  test_advancing_front.cpp  test_common.cpp  test_plane_intersection.cpp
pump_vision_tutorial/: lesson_opencv_short.bag
pump_vision_tutorial/ref/: CMakeLists.txt  package.xml
pump_vision_tutorial/ref/src/: pump_vision_node.cpp
pump_vision_tutorial/work/src/: pump_vision_node.cpp
